--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: any
   shared_preferences: ^2.2.2
   syncfusion_flutter_calendar: ^20.1.57
+  supabase_flutter: ^2.0.8
 
 dev_dependencies:
 
@@ -46,7 +47,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-  flutter_slidable: ^3.0.0
   flutter_test:
     sdk: flutter
 
